# Iso

./: Lista_Actividades.txt  Lista_Usuarios.txt  README.md  app  app.cc  clone.txt
BOBI/: Lista_Usuarios.txt
BOBI-app/: Lista_Usuarios.txt  app-main
BOBI-files/src/actividades/: actividades-main.cc
BOBI-files/src/director/: CMakeLists.txt
BOBI-files/src/foro/: foro.h
BOBI-files/src/persona/: persona.h
BOBI-files/src/systema/: systema.cc
BOBI-files/tests/: foro-test.cc
BOBI/src/actividades/: CMakeLists.txt
BOBI/src/app/: app.cc
BOBI/src/foro/: foro.cc  foro.h
BOBI/src/menus/: CMakeLists.txt  menus.cc
BOBI/src/systema/: systema.cc  systema.h
BOBI/src/usuario/: usuario.cc  usuario.h
BOBI/tests/: CMakeLists.txt  usuario-test.cc
actividad/: CMakeLists.txt  actividad.h  foro-main.cc  foro.cc
actividad/actividad/: Lista_Actividades.txt
actividad/admin/: notas.txt
bobi/: CMakeLists.txt
bobi/src/app/: CMakeLists.txt
bobi/src/persona/: persona.cc
bobi/src/systema/: CMakeLists.txt
bobi/src/usuario/: CMakeLists.txt  usuario.cc
bobi/tests/: actividades-test.cc
files/: CMakeLists.txt  actividad.h  admin.cc  admin.h  foro.cc  menus.cc
foro/: CMakeLists.txt  foro.cc  foro.h
persona/: persona.cc  persona.h
proyecto_final/: CMakeLists.txt  Lista_Actividades.txt  Lista_Usuarios.txt
proyecto_final/src/: CMakeLists.txt
proyecto_final/src/actividades/: actividades.cc  actividades.h
proyecto_final/src/admin/: CMakeLists.txt  admin.h
proyecto_final/src/app/: CMakeLists.txt  app.cc
proyecto_final/src/director/: director.h
proyecto_final/src/director-actividad/: CMakeLists.txt  director-actividad.h
proyecto_final/src/foro/: CMakeLists.txt  foro.cc  foro.h
proyecto_final/src/menus/: CMakeLists.txt  menus.cc
proyecto_final/src/persona/: CMakeLists.txt  persona.cc
proyecto_final/src/systema/: systema.cc  systema.h
proyecto_final/src/usuario/: CMakeLists.txt  usuario.cc  usuario.h
proyecto_final/tests/: CMakeLists.txt  actividad-test.cc  actividades-test.cc  foro-test.cc  persona-test.cc  systema-test.cc
usuario/: usuario.cc  usuario.h
